Fix boxing samples